backport: re PR middle-end/40291 (ICE on unprototyped memcmp with long long last argument)

2009-07-10  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-05-29  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40291
	* builtins.c (expand_builtin_memcmp): Convert len to sizetype
	before expansion.

	* gcc.c-torture/compile/pr40291.c: New test.

From-SVN: r149487